name:                lfg
version:             0.0.2
cabal-version:       >= 1.6
synopsis:            Lagged Fibonacci pseudo random number generator
description:         Write long description here
category:            FFI, Random Numbers
license:             BSD3
license-file:        LICENSE
copyright:           (c)
author:              Bernard James Pope (Bernie Pope)
maintainer:          florbitous@gmail.com
homepage:            http://github.com/bjpop/lfg
build-type:          Simple
stability:           experimental
tested-with:         GHC==7.0.3
extra-source-files:  README.txt

source-repository head
  type: git
  location: git://github.com/bjpop/lfg

Library
   build-tools:
   ghc-options: -Wall -fno-warn-name-shadowing
   hs-source-dirs:
      src
   build-depends:
      base > 3 && <= 5,
      haskell98,
      array,
      mwc-random
   exposed-modules:
      Random.LFG,
      Random.LFG.Init
   other-modules:
